<resources>
    <string name="app_name">English Classes</string>
    <string name="english_classes">English Classes</string>
    <string name="by_sir">by S B Patel Sir</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="logo_of_google">Logo of Google</string>
    <string name="logo_of_facebook">logo of facebook</string>
    <string name="forget_password">Forget password?</string>
    <string name="forgot_password_illustration">forgot password illustration</string>
    <string name="back_arrow">back arrow</string>
    <string name="enter_your_email_below_to">Enter your email below to</string>
    <string name="receive_password_reset_instruction">receive password reset instruction</string>
    <string name="name">Name</string>
    <string name="recover_password">Recover Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="sign_up_with_google">SignUp with Google</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="passwords_did_not_match">Passwords didn\'t match</string>
    <string name="www_elearn_com">www.elearn.com</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="yes_log_me_out">Yes Log me out</string>
    <string name="naah_just_kidding">Naah, Just Kidding</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="oh_no_you_re_leaving">Oh no! You\'re leaving..</string>
    <string name="exitDialogImage">exitDialogImage</string>
    <string name="home">Home</string>
    <string name="live">Live</string>
    <string name="quizes">Quizzes</string>
    <string name="events">Events</string>
    <string name="announcements">Announcements</string>
    <string name="tests">Tests</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="switch_to_dark_mode">Switch To Dark Mode</string>
    <string name="arrow_forward">arrow forward</string>
    <string name="third_party_notices">Third-party notices</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="descriptionHtlmLink"><![CDATA[Description \nyou can put Urls too.\n ex:- \"www.google.com\"]]></string>
    <string name="google_developer_api_key">AIzaSyB_757xeLQRE4VTuWqPl5gGpThHREJYfSU</string>
</resources>
