<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_forgot"
                android:layout_centerHorizontal="true"
                android:id="@+id/imageForgot"
                android:contentDescription="@string/forgot_password_illustration"
                android:layout_marginTop="40dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_24px"
                android:layout_margin="20dp"
                android:id="@+id/btnBackArrow"
                android:contentDescription="@string/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:layout_below="@id/imageForgot"
                android:textSize="24sp"
                android:textStyle="bold"
                android:id="@+id/txt1"
                android:textColor="@color/button1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email_below_to"
                android:textSize="20sp"
                android:layout_below="@id/txt1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/text2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_password_reset_instruction"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:id="@+id/text3"
                android:layout_below="@id/text2" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_textColorHint="#808080"
                android:layout_centerHorizontal="true"
                android:drawableStart="@drawable/ic_alternate_email_24px"
                android:drawablePadding="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/text3"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:met_floatingLabel="highlight" />

            <ru.katso.livebutton.LiveButton xmlns:livebutton="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btnRecoverPassword"
                android:layout_width="220dp"
                android:layout_height="43dp"
                android:layout_below="@id/editTextEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/recover_password"
                android:textColor="@color/white1"
                android:textSize="18sp"
                android:textStyle="bold"
                livebutton:backgroundColor="@color/button1"
                livebutton:corners="4dp"
                livebutton:normalHeight="6dp"
                livebutton:pressedHeight="2dp"
                livebutton:shadowColor="#47776F" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>