<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:elevation="4dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <androidx.cardview.widget.CardView
                android:id="@+id/CardDarkMode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/switch_to_dark_mode"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.mahfa.dnswitch.DayNightSwitch
                        android:id="@+id/dayNightSwitch"
                        android:layout_width="55dp"
                        android:layout_height="28dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardTermsAndCondition"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/CardDarkMode"
                android:layout_margin="5dp"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/terms_and_conditions"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/arrow_forward"
                        android:src="@drawable/ic_arrow_forward_ios_24px" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/CardTermsAndCondition"
                android:layout_margin="5dp"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/privacy_policy"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/arrow_forward"
                        android:src="@drawable/ic_arrow_forward_ios_24px" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardTPartyNotice"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/CardPrivacyPolicy"
                android:layout_margin="5dp"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/third_party_notices"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/arrow_forward"
                        android:src="@drawable/ic_arrow_forward_ios_24px" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>