<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:indeterminate="true"
        android:visibility="gone" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/thirdRelLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_24px"
                android:layout_margin="20dp"
                android:id="@+id/btnBackArrow"
                android:contentDescription="@string/back_arrow" />

            <RelativeLayout
                android:id="@+id/firstRelLayout"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/eLearn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/english_classes"
                    android:textStyle="bold"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/by_someone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/eLearn"
                    android:gravity="top"
                    android:text="@string/by_sir"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/secondRelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:layout_below="@id/firstRelLayout">

                <RelativeLayout
                    android:id="@+id/input1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:drawableStart="@drawable/ic_account_circle_24px"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorPrimary"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:selectAllOnFocus="true"
                        app:met_floatingLabel="highlight"
                        app:met_textColorHint="#808080" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editTextName"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/ic_alternate_email_24px"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorPrimary"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        app:met_floatingLabel="highlight"
                        app:met_textColorHint="#808080" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/input2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input1">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/ic_lock_24px"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorPrimary"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        app:met_floatingLabel="highlight"
                        app:met_textColorHint="#808080"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/imageHide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_hide"
                        android:tint="@color/colorPrimary" />

                    <ImageView
                        android:id="@+id/imageShow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_eye"
                        android:tint="@color/colorPrimary"
                        android:visibility="gone" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/input3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input2">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/editTextPasswordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:drawableStart="@drawable/ic_lock_24px"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorPrimary"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        app:met_floatingLabel="highlight"
                        app:met_textColorHint="#808080"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/imageHide1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_hide"
                        android:tint="@color/colorPrimary" />

                    <ImageView
                        android:id="@+id/imageShow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_eye"
                        android:tint="@color/colorPrimary"
                        android:visibility="gone" />

                </RelativeLayout>


                <ru.katso.livebutton.LiveButton xmlns:livebutton="http://schemas.android.com/apk/res-auto"
                    android:layout_width="140dp"
                    android:layout_height="43dp"
                    android:layout_below="@id/input3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:id="@+id/btnSignUp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    livebutton:backgroundColor="@color/button1"
                    livebutton:corners="4dp"
                    livebutton:normalHeight="6dp"
                    livebutton:pressedHeight="2dp"
                    livebutton:shadowColor="#47776F" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/thirdRelLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-20dp"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="20dp" />

    </RelativeLayout>

</RelativeLayout>